--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Furniture</title>
+    <title>Project 1</title>
     <link rel="stylesheet" href="style.css">
     
     <!-- bootstrap cdn -->
@@ -56,11 +56,11 @@
     <!-- Main Navbar Ends Here -->
 
     <!-- Main Content Starts Here-->
-    <div class="main-content d-flex align-items-center justify-content-center text-center text-white" style="height: 90vh; background-image: url(./image/background.png); background-size: cover;">
+    <div class="main-content d-flex align-items-center text-white" style="height: 90vh; background-image: url(./image/background.png); background-size: cover;">
         <div>
-            <h1>Style Meets Comfort  <br> Shop the Best Furniture.</h1>
+            <h1>Simplicity, Comfort, and <br> Style Combined.</h1>
             <p>Want Furniture That Speaks Elegance & Comfort? Upgrade Your Living Space with Affordable Luxury.</p>
-            <button class="btn1">Shop Now</button>
+            <button class="btn1" style="color: rgb(75, 71, 71) ;">Shop Now</button>
         </div>
     </div>
 
